--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -33,6 +33,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "For this week's exercise I have chosen Breast Cancer Wisconsin Diagnostic data. This dataset derived from the digitized image of a fine niddle aspirate(FNA) of breast mass. The dataset consists of important features(computed for each cell nucleus) such as radius, texture, perimeter, area, compactness, smoothness, concave points, concavity, fractal dimensions etc and a clear target value \"Diagnosis\" to distinguish between malignant and benign cases. A short description is provided below to analyze a possible Who, What, and How for this dataset, using the ideas in the The Storytelling With Data book.\n",
+        "\n",
+        "**Who:** This signifies the audience. The audiences are, healthcare professionals such as radiologist, oncologist, clinical researchers doing research on breast cancer diagnosis, data scientist working on clinical classification models, cancer patients to understand the accuracy of the cancer diagnosis, hospitals administrators(for resource allocation purpose).\n",
+        "\n",
+        "**What:** This expalins the main action or core isight to be explained to the audiences. The real-valued attributes of FNA images of breast mass cell nuclei provides a strong and clear understanding of benign and malignant tumor. This analysis will be helpful to build predictive cancer diagnosis model."
+      ],
+      "metadata": {
+        "id": "K9ZzNhO7S4qZ"
+      },
+      "id": "K9ZzNhO7S4qZ"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "c862fc32-1297-4587-b9da-4b0642ab3e6e",
@@ -41,30 +55,6 @@
       },
       "outputs": [],
       "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "id": "898eb327-aefd-4ac0-b95a-92b616a2181b",
-      "metadata": {
-        "id": "898eb327-aefd-4ac0-b95a-92b616a2181b"
-      },
-      "source": [
-        "# 3. Homework - work with your own data"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "id": "fe925521-979f-4983-8d85-8db8d1316e99",
-      "metadata": {
-        "id": "fe925521-979f-4983-8d85-8db8d1316e99"
-      },
-      "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from datetime import datetime, timedelta"
-      ]
     },
     {
       "cell_type": "code",
@@ -120,89 +110,34 @@
         "print(breast_cancer_wisconsin_diagnostic.variables)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "l8BPMLaxryKf",
-        "outputId": "b1c741eb-ac17-46f0-b054-5928edd2cf84"
+        "id": "l8BPMLaxryKf"
       },
       "id": "l8BPMLaxryKf",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'uci_id': 17, 'name': 'Breast Cancer Wisconsin (Diagnostic)', 'repository_url': 'https://archive.ics.uci.edu/dataset/17/breast+cancer+wisconsin+diagnostic', 'data_url': 'https://archive.ics.uci.edu/static/public/17/data.csv', 'abstract': 'Diagnostic Wisconsin Breast Cancer Database.', 'area': 'Health and Medicine', 'tasks': ['Classification'], 'characteristics': ['Multivariate'], 'num_instances': 569, 'num_features': 30, 'feature_types': ['Real'], 'demographics': [], 'target_col': ['Diagnosis'], 'index_col': ['ID'], 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 1993, 'last_updated': 'Fri Nov 03 2023', 'dataset_doi': '10.24432/C5DW2B', 'creators': ['William Wolberg', 'Olvi Mangasarian', 'Nick Street', 'W. Street'], 'intro_paper': {'ID': 230, 'type': 'NATIVE', 'title': 'Nuclear feature extraction for breast tumor diagnosis', 'authors': 'W. Street, W. Wolberg, O. Mangasarian', 'venue': 'Electronic imaging', 'year': 1993, 'journal': None, 'DOI': '10.1117/12.148698', 'URL': 'https://www.semanticscholar.org/paper/53f0fbb425bc14468eb3bf96b2e1d41ba8087f36', 'sha': None, 'corpus': None, 'arxiv': None, 'mag': None, 'acl': None, 'pmid': None, 'pmcid': None}, 'additional_info': {'summary': 'Features are computed from a digitized image of a fine needle aspirate (FNA) of a breast mass.  They describe characteristics of the cell nuclei present in the image. A few of the images can be found at http://www.cs.wisc.edu/~street/images/\\r\\n\\r\\nSeparating plane described above was obtained using Multisurface Method-Tree (MSM-T) [K. P. Bennett, \"Decision Tree Construction Via Linear Programming.\" Proceedings of the 4th Midwest Artificial Intelligence and Cognitive Science Society, pp. 97-101, 1992], a classification method which uses linear programming to construct a decision tree.  Relevant features were selected using an exhaustive search in the space of 1-4 features and 1-3 separating planes.\\r\\n\\r\\nThe actual linear program used to obtain the separating plane in the 3-dimensional space is that described in: [K. P. Bennett and O. L. Mangasarian: \"Robust Linear Programming Discrimination of Two Linearly Inseparable Sets\", Optimization Methods and Software 1, 1992, 23-34].\\r\\n\\r\\nThis database is also available through the UW CS ftp server:\\r\\nftp ftp.cs.wisc.edu\\r\\ncd math-prog/cpo-dataset/machine-learn/WDBC/', 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': '1) ID number\\r\\n2) Diagnosis (M = malignant, B = benign)\\r\\n3-32)\\r\\n\\r\\nTen real-valued features are computed for each cell nucleus:\\r\\n\\r\\n\\ta) radius (mean of distances from center to points on the perimeter)\\r\\n\\tb) texture (standard deviation of gray-scale values)\\r\\n\\tc) perimeter\\r\\n\\td) area\\r\\n\\te) smoothness (local variation in radius lengths)\\r\\n\\tf) compactness (perimeter^2 / area - 1.0)\\r\\n\\tg) concavity (severity of concave portions of the contour)\\r\\n\\th) concave points (number of concave portions of the contour)\\r\\n\\ti) symmetry \\r\\n\\tj) fractal dimension (\"coastline approximation\" - 1)', 'citation': None}}\n",
-            "                  name     role         type demographic description units  \\\n",
-            "0                   ID       ID  Categorical        None        None  None   \n",
-            "1            Diagnosis   Target  Categorical        None        None  None   \n",
-            "2              radius1  Feature   Continuous        None        None  None   \n",
-            "3             texture1  Feature   Continuous        None        None  None   \n",
-            "4           perimeter1  Feature   Continuous        None        None  None   \n",
-            "5                area1  Feature   Continuous        None        None  None   \n",
-            "6          smoothness1  Feature   Continuous        None        None  None   \n",
-            "7         compactness1  Feature   Continuous        None        None  None   \n",
-            "8           concavity1  Feature   Continuous        None        None  None   \n",
-            "9      concave_points1  Feature   Continuous        None        None  None   \n",
-            "10           symmetry1  Feature   Continuous        None        None  None   \n",
-            "11  fractal_dimension1  Feature   Continuous        None        None  None   \n",
-            "12             radius2  Feature   Continuous        None        None  None   \n",
-            "13            texture2  Feature   Continuous        None        None  None   \n",
-            "14          perimeter2  Feature   Continuous        None        None  None   \n",
-            "15               area2  Feature   Continuous        None        None  None   \n",
-            "16         smoothness2  Feature   Continuous        None        None  None   \n",
-            "17        compactness2  Feature   Continuous        None        None  None   \n",
-            "18          concavity2  Feature   Continuous        None        None  None   \n",
-            "19     concave_points2  Feature   Continuous        None        None  None   \n",
-            "20           symmetry2  Feature   Continuous        None        None  None   \n",
-            "21  fractal_dimension2  Feature   Continuous        None        None  None   \n",
-            "22             radius3  Feature   Continuous        None        None  None   \n",
-            "23            texture3  Feature   Continuous        None        None  None   \n",
-            "24          perimeter3  Feature   Continuous        None        None  None   \n",
-            "25               area3  Feature   Continuous        None        None  None   \n",
-            "26         smoothness3  Feature   Continuous        None        None  None   \n",
-            "27        compactness3  Feature   Continuous        None        None  None   \n",
-            "28          concavity3  Feature   Continuous        None        None  None   \n",
-            "29     concave_points3  Feature   Continuous        None        None  None   \n",
-            "30           symmetry3  Feature   Continuous        None        None  None   \n",
-            "31  fractal_dimension3  Feature   Continuous        None        None  None   \n",
-            "\n",
-            "   missing_values  \n",
-            "0              no  \n",
-            "1              no  \n",
-            "2              no  \n",
-            "3              no  \n",
-            "4              no  \n",
-            "5              no  \n",
-            "6              no  \n",
-            "7              no  \n",
-            "8              no  \n",
-            "9              no  \n",
-            "10             no  \n",
-            "11             no  \n",
-            "12             no  \n",
-            "13             no  \n",
-            "14             no  \n",
-            "15             no  \n",
-            "16             no  \n",
-            "17             no  \n",
-            "18             no  \n",
-            "19             no  \n",
-            "20             no  \n",
-            "21             no  \n",
-            "22             no  \n",
-            "23             no  \n",
-            "24             no  \n",
-            "25             no  \n",
-            "26             no  \n",
-            "27             no  \n",
-            "28             no  \n",
-            "29             no  \n",
-            "30             no  \n",
-            "31             no  \n"
-          ]
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "898eb327-aefd-4ac0-b95a-92b616a2181b",
+      "metadata": {
+        "id": "898eb327-aefd-4ac0-b95a-92b616a2181b"
+      },
+      "source": [
+        "# 3. Homework - work with your own data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "fe925521-979f-4983-8d85-8db8d1316e99",
+      "metadata": {
+        "id": "fe925521-979f-4983-8d85-8db8d1316e99"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from datetime import datetime, timedelta"
       ]
     },
     {
@@ -1688,12 +1623,12 @@
         "df2"
       ],
       "metadata": {
-        "id": "VqFR0Lr3Ylcf",
-        "outputId": "0d0d45bc-8e2d-4623-e4c6-a93cf3633532",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 444
-        }
+        },
+        "id": "VqFR0Lr3Ylcf",
+        "outputId": "0d0d45bc-8e2d-4623-e4c6-a93cf3633532"
       },
       "id": "VqFR0Lr3Ylcf",
       "execution_count": 16,
@@ -2224,11 +2159,11 @@
         "print(df_BreastCancer[\"Diagnosis\"].value_counts(normalize=True)*100)"
       ],
       "metadata": {
-        "id": "qdzOOlf208eB",
-        "outputId": "a5d8d095-5063-48fa-e603-c064211a326b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qdzOOlf208eB",
+        "outputId": "a5d8d095-5063-48fa-e603-c064211a326b"
       },
       "id": "qdzOOlf208eB",
       "execution_count": 17,
@@ -2248,7 +2183,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Conclusion**: The breast cancer dataset is a clean dataset with no missing value and no duplicates records. I do not need to modify any features. This dataset doesn’t have equal number of data of each class from the categorical column dignosis(B, M). From the analysis we can see benign case is 62.7% and malignant case is 37.3% out of 569 instances. Benign class is notably(almost twice) larger than malignant class. The classes are imbalance."
+        "**Conclusion**: The breast cancer dataset is a clean dataset with no missing value and no duplicates records. I do not need to modify any features. This dataset doesn’t have equal number of data of each class from the categorical column dignosis(B, M). From the analysis we can see benign case is 62.7% and malignant case is 37.3% out of 569 instances. Benign class is notably(almost twice) larger than the malignant class. Hence the classes are imbalance."
       ],
       "metadata": {
         "id": "kgO9hTQ2iINP"
