--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -37,9 +37,22 @@
       "source": [
         "For this week's exercise I have chosen Breast Cancer Wisconsin Diagnostic data. This dataset derived from the digitized image of a fine niddle aspirate(FNA) of breast mass. The dataset consists of important features(computed for each cell nucleus) such as radius, texture, perimeter, area, compactness, smoothness, concave points, concavity, fractal dimensions etc and a clear target value \"Diagnosis\" to distinguish between malignant and benign cases. A short description is provided below to analyze a possible Who, What, and How for this dataset, using the ideas in the The Storytelling With Data book.\n",
         "\n",
-        "**Who:** This signifies the audience. The audiences are, healthcare professionals such as radiologist, oncologist, clinical researchers doing research on breast cancer diagnosis, data scientist working on clinical classification models, cancer patients to understand the accuracy of the cancer diagnosis, hospitals administrators(for resource allocation purpose).\n",
+        "**Who:** This signifies the audience. The audiences are, healthcare professionals such as radiologist, oncologist, clinical researchers, data scientists, cancer patients, hospitals administrators(for resource allocation purpose).\n",
         "\n",
-        "**What:** This expalins the main action or core isight to be explained to the audiences. The real-valued attributes of FNA images of breast mass cell nuclei provides a strong and clear understanding of benign and malignant tumor. This analysis will be helpful to build predictive cancer diagnosis model."
+        "**What:** This expalins the main action or core isight to be explained to the audiences. The real-valued attributes of FNA images of breast mass cell nuclei provides a strong and clear understanding of benign and malignant tumor. This analysis will be helpful to build predictive cancer diagnosis model which can be used to develop cancer diagnostic tools for healthcare professional and researchers, to build tumor classification data models for data modelers, to understand the accuracy of the cancer diagnosis for patients. to help the hospitals administrators for resources allocating for the treatments.\n",
+        "\n",
+        "**How:** This indicates the survey and/or data collection for supporting evidence. Based on the available data in the UCI repository this dataset was cited and used in 37 international research papers. Many data models in these research journals show more than 97% accuracy and ROC-AUC score greater than 0.98. Few examples are provided below.\n",
+        "1.   Predicting Breast Cancer Leveraging Supervised Machine Learning Techniques. Best accuracy 99.12%. https://pmc.ncbi.nlm.nih.gov/articles/PMC9398810/#sec7\n",
+        "\n",
+        "2.  Comparative Study of Feature Selection Techniques for Breast Cancer Prediction. highest accuracy ~0.97 and AUC ~0.993. https://www.ijraset.com/research-paper/comparative-study-of-feature-selection-techniques-for-breast-cancer-prediction\n",
+        "\n",
+        "3.  Machine learning-based diagnosis of breast cancer utilizing feature optimization technique. highest accuracy ~98.77%. https://www.sciencedirect.com/science/article/pii/S2666990023000071\n",
+        "\n",
+        "4.  Machine Learning Approaches for Cancer Detection. Highest accuracy ~97%, AUC 99.6%. https://www.semanticscholar.org/paper/Machine-Learning-Approaches-for-Cancer-Detection-Sharma-Kulshrestha/0b4c501aedb8556a59c4fdac40944031ee44e659\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "K9ZzNhO7S4qZ"
@@ -128,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "fe925521-979f-4983-8d85-8db8d1316e99",
       "metadata": {
         "id": "fe925521-979f-4983-8d85-8db8d1316e99"
@@ -2212,13 +2225,291 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "8b2888f9-3700-45ab-9829-6a5372106f9f",
       "metadata": {
-        "id": "8b2888f9-3700-45ab-9829-6a5372106f9f"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        },
+        "id": "8b2888f9-3700-45ab-9829-6a5372106f9f",
+        "outputId": "edcdec43-6f4f-40d8-db31-32e68618ce51"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   studentID Program         survey_data\n",
+              "0          0  Before           Not Great\n",
+              "1          1   After                  OK\n",
+              "2          2   After             Excited\n",
+              "3          3  Before  Kind of interested\n",
+              "4          4   After             Excited\n",
+              "..       ...     ...                 ...\n",
+              "95        95  Before               Bored\n",
+              "96        96  Before             Excited\n",
+              "97        97   After           Not Great\n",
+              "98        98   After  Kind of interested\n",
+              "99        99  Before           Not Great\n",
+              "\n",
+              "[100 rows x 3 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-27615a4d-8801-4f44-ae3a-b7659b85489e\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>studentID</th>\n",
+              "      <th>Program</th>\n",
+              "      <th>survey_data</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>Before</td>\n",
+              "      <td>Not Great</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>After</td>\n",
+              "      <td>OK</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>After</td>\n",
+              "      <td>Excited</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Before</td>\n",
+              "      <td>Kind of interested</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>After</td>\n",
+              "      <td>Excited</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>95</th>\n",
+              "      <td>95</td>\n",
+              "      <td>Before</td>\n",
+              "      <td>Bored</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>96</th>\n",
+              "      <td>96</td>\n",
+              "      <td>Before</td>\n",
+              "      <td>Excited</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>97</th>\n",
+              "      <td>97</td>\n",
+              "      <td>After</td>\n",
+              "      <td>Not Great</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>98</th>\n",
+              "      <td>98</td>\n",
+              "      <td>After</td>\n",
+              "      <td>Kind of interested</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99</th>\n",
+              "      <td>99</td>\n",
+              "      <td>Before</td>\n",
+              "      <td>Not Great</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>100 rows × 3 columns</p>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-27615a4d-8801-4f44-ae3a-b7659b85489e')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-27615a4d-8801-4f44-ae3a-b7659b85489e button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-27615a4d-8801-4f44-ae3a-b7659b85489e');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "  <div id=\"id_2658d9c1-1b72-4a8c-99dd-c1e63d303a9f\">\n",
+              "    <style>\n",
+              "      .colab-df-generate {\n",
+              "        background-color: #E8F0FE;\n",
+              "        border: none;\n",
+              "        border-radius: 50%;\n",
+              "        cursor: pointer;\n",
+              "        display: none;\n",
+              "        fill: #1967D2;\n",
+              "        height: 32px;\n",
+              "        padding: 0 0 0 0;\n",
+              "        width: 32px;\n",
+              "      }\n",
+              "\n",
+              "      .colab-df-generate:hover {\n",
+              "        background-color: #E2EBFA;\n",
+              "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "        fill: #174EA6;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate {\n",
+              "        background-color: #3B4455;\n",
+              "        fill: #D2E3FC;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate:hover {\n",
+              "        background-color: #434B5C;\n",
+              "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "        fill: #FFFFFF;\n",
+              "      }\n",
+              "    </style>\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('df_survey')\"\n",
+              "            title=\"Generate code using this dataframe.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "    <script>\n",
+              "      (() => {\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#id_2658d9c1-1b72-4a8c-99dd-c1e63d303a9f button.colab-df-generate');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      buttonEl.onclick = () => {\n",
+              "        google.colab.notebook.generateWithVariable('df_survey');\n",
+              "      }\n",
+              "      })();\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "df_survey",
+              "summary": "{\n  \"name\": \"df_survey\",\n  \"rows\": 100,\n  \"fields\": [\n    {\n      \"column\": \"studentID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 100,\n        \"samples\": [\n          \"83\",\n          \"53\",\n          \"70\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Program\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"After\",\n          \"Before\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"survey_data\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"OK\",\n          \"Bored\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
+      "source": [
+        "#Generating Data for Figure 0.5 Example 2 (Storytelling with data)\n",
+        "num_students = 100\n",
+        "np.random.seed(0)\n",
+        "df_survey = pd.DataFrame(columns = [\"studentID\"])\n",
+        "df_survey[\"studentID\"] = [str(x) for x in np.arange(num_students)]\n",
+        "df_survey[\"Program\"] = np.random.choice([\"Before\",\"After\"], size = num_students)\n",
+        "df_survey[\"survey_data\"] = np.random.choice([\"Bored\", \"Not Great\", \"OK\", \"Kind of interested\", \" Excited\"], size = num_students)\n",
+        "df_survey"
+      ]
     }
   ],
   "metadata": {
