--- a/Week3.ipynb
+++ b/Week3.ipynb
@@ -1560,11 +1560,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "6OAWkDpvUEIS",
-        "outputId": "93afb420-d825-4695-d795-66d376975378",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6OAWkDpvUEIS",
+        "outputId": "93afb420-d825-4695-d795-66d376975378"
       },
       "id": "6OAWkDpvUEIS",
       "execution_count": 31,
@@ -1709,13 +1709,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "id": "caeabcfa-a68e-4951-be11-46e36e83faa2",
       "metadata": {
-        "id": "caeabcfa-a68e-4951-be11-46e36e83faa2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "caeabcfa-a68e-4951-be11-46e36e83faa2",
+        "outputId": "3ba6de9d-7930-466f-9add-5b6d3b586fa2"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "90th percentile count for each ride\n",
+            "MartianRide    2.0\n",
+            "TeacupRide     2.0\n",
+            "RiverRide      3.0\n",
+            "Name: 0.9, dtype: float64\n"
+          ]
+        }
+      ],
+      "source": [
+        "rides=[\"MartianRide\",\"TeacupRide\",\"RiverRide\"] #list of rides\n",
+        "#90th percentile\n",
+        "P_90= df[rides].quantile(0.9)\n",
+        "print(\"90th percentile count for each ride\")\n",
+        "print(P_90)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1737,13 +1759,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "id": "1cc2b321-a982-49e5-af3a-0d1414cce823",
       "metadata": {
-        "id": "1cc2b321-a982-49e5-af3a-0d1414cce823"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1cc2b321-a982-49e5-af3a-0d1414cce823",
+        "outputId": "d4cead18-44ee-4b9b-a260-a64ccf7e2541"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total ride per day distributed by rides\n",
+            "            MartianRide  TeacupRide  RiverRide\n",
+            "VisitDate                                     \n",
+            "2010-01-01            3           1          5\n",
+            "2010-01-02            0           1          2\n",
+            "2010-01-03            0           6          5\n",
+            "2010-01-04            0           0          1\n",
+            "2010-01-05            1           0          0\n",
+            "...                 ...         ...        ...\n",
+            "2023-12-27            1           1          2\n",
+            "2023-12-28           12           0          0\n",
+            "2023-12-29            0           1          3\n",
+            "2023-12-30            3           0          1\n",
+            "2023-12-31            0           0          1\n",
+            "\n",
+            "[4404 rows x 3 columns]\n",
+            ".................................................\n",
+            "Total ride per day all rides combined\n",
+            "VisitDate\n",
+            "2010-01-01     9\n",
+            "2010-01-02     3\n",
+            "2010-01-03    11\n",
+            "2010-01-04     1\n",
+            "2010-01-05     1\n",
+            "              ..\n",
+            "2023-12-27     4\n",
+            "2023-12-28    12\n",
+            "2023-12-29     4\n",
+            "2023-12-30     4\n",
+            "2023-12-31     1\n",
+            "Length: 4404, dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "rides=[\"MartianRide\",\"TeacupRide\",\"RiverRide\"] #list of rides\n",
+        "ride_by_day=df.groupby(\"VisitDate\")[rides].sum()\n",
+        "total=ride_by_day.sum(axis=1)\n",
+        "print(\"Total ride per day distributed by rides\")\n",
+        "print(ride_by_day)\n",
+        "print(\".................................................\")\n",
+        "\n",
+        "print(\"Total ride per day all rides combined\")\n",
+        "print(total)"
+      ]
     },
     {
       "cell_type": "markdown",
