--- a/Week1.ipynb
+++ b/Week1.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "5c24f12c-b364-40f0-b295-7c1ba88be680",
       "metadata": {
         "id": "5c24f12c-b364-40f0-b295-7c1ba88be680"
@@ -3036,12 +3036,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "d4sLgOMjMr6k",
-        "outputId": "bed8f3da-6464-456b-8619-3d26b30179c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 641
-        }
+        },
+        "id": "d4sLgOMjMr6k",
+        "outputId": "bed8f3da-6464-456b-8619-3d26b30179c0"
       },
       "id": "d4sLgOMjMr6k",
       "execution_count": 93,
@@ -3080,7 +3080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 5,
       "id": "c023ff6f-f3c8-4df7-a7a6-191e70bcb362",
       "metadata": {
         "colab": {
@@ -3088,31 +3088,31 @@
           "height": 424
         },
         "id": "c023ff6f-f3c8-4df7-a7a6-191e70bcb362",
-        "outputId": "32698bc3-d815-489e-c86c-f5547e03d29f"
+        "outputId": "2ef1dd8b-1a5b-4bb1-f00b-a180b876dc7c"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   studentID Program         survey_data\n",
-              "0          0  Before           Not Great\n",
-              "1          1   After                  OK\n",
-              "2          2   After             Excited\n",
-              "3          3  Before  Kind of interested\n",
-              "4          4   After             Excited\n",
-              "..       ...     ...                 ...\n",
-              "95        95  Before               Bored\n",
-              "96        96  Before             Excited\n",
-              "97        97   After           Not Great\n",
-              "98        98   After  Kind of interested\n",
-              "99        99  Before           Not Great\n",
+              "   employeeID  Month     Ticket\n",
+              "0           0    Jun  Processed\n",
+              "1           1    Jan  Processed\n",
+              "2           2  April  Processed\n",
+              "3           3    Dec  Processed\n",
+              "4           4  April   Received\n",
+              "..        ...    ...        ...\n",
+              "95         95    Nov   Received\n",
+              "96         96    Aug   Received\n",
+              "97         97    Jun  Processed\n",
+              "98         98    Jun  Processed\n",
+              "99         99    Jan  Processed\n",
               "\n",
               "[100 rows x 3 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9fc3841b-4af1-4096-aa0b-a817badd7d9e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-60b8ee5b-4789-4ab4-8e85-11d53638b60e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3131,41 +3131,41 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>studentID</th>\n",
-              "      <th>Program</th>\n",
-              "      <th>survey_data</th>\n",
+              "      <th>employeeID</th>\n",
+              "      <th>Month</th>\n",
+              "      <th>Ticket</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>0</td>\n",
-              "      <td>Before</td>\n",
-              "      <td>Not Great</td>\n",
+              "      <td>Jun</td>\n",
+              "      <td>Processed</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1</td>\n",
-              "      <td>After</td>\n",
-              "      <td>OK</td>\n",
+              "      <td>Jan</td>\n",
+              "      <td>Processed</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2</td>\n",
-              "      <td>After</td>\n",
-              "      <td>Excited</td>\n",
+              "      <td>April</td>\n",
+              "      <td>Processed</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>3</td>\n",
-              "      <td>Before</td>\n",
-              "      <td>Kind of interested</td>\n",
+              "      <td>Dec</td>\n",
+              "      <td>Processed</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>4</td>\n",
-              "      <td>After</td>\n",
-              "      <td>Excited</td>\n",
+              "      <td>April</td>\n",
+              "      <td>Received</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -3176,32 +3176,32 @@
               "    <tr>\n",
               "      <th>95</th>\n",
               "      <td>95</td>\n",
-              "      <td>Before</td>\n",
-              "      <td>Bored</td>\n",
+              "      <td>Nov</td>\n",
+              "      <td>Received</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>96</th>\n",
               "      <td>96</td>\n",
-              "      <td>Before</td>\n",
-              "      <td>Excited</td>\n",
+              "      <td>Aug</td>\n",
+              "      <td>Received</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>97</th>\n",
               "      <td>97</td>\n",
-              "      <td>After</td>\n",
-              "      <td>Not Great</td>\n",
+              "      <td>Jun</td>\n",
+              "      <td>Processed</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>98</th>\n",
               "      <td>98</td>\n",
-              "      <td>After</td>\n",
-              "      <td>Kind of interested</td>\n",
+              "      <td>Jun</td>\n",
+              "      <td>Processed</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>99</th>\n",
               "      <td>99</td>\n",
-              "      <td>Before</td>\n",
-              "      <td>Not Great</td>\n",
+              "      <td>Jan</td>\n",
+              "      <td>Processed</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -3210,7 +3210,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9fc3841b-4af1-4096-aa0b-a817badd7d9e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-60b8ee5b-4789-4ab4-8e85-11d53638b60e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3262,12 +3262,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9fc3841b-4af1-4096-aa0b-a817badd7d9e button.colab-df-convert');\n",
+              "        document.querySelector('#df-60b8ee5b-4789-4ab4-8e85-11d53638b60e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9fc3841b-4af1-4096-aa0b-a817badd7d9e');\n",
+              "        const element = document.querySelector('#df-60b8ee5b-4789-4ab4-8e85-11d53638b60e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3287,7 +3287,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_812b3df4-ec55-48a6-86a2-2c0a9c3bf069\">\n",
+              "  <div id=\"id_d35e8465-0715-4a53-811d-60f122569eb3\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -3319,7 +3319,7 @@
               "        fill: #FFFFFF;\n",
               "      }\n",
               "    </style>\n",
-              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('df_survey')\"\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('df_hire')\"\n",
               "            title=\"Generate code using this dataframe.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3331,12 +3331,12 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_812b3df4-ec55-48a6-86a2-2c0a9c3bf069 button.colab-df-generate');\n",
+              "        document.querySelector('#id_d35e8465-0715-4a53-811d-60f122569eb3 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      buttonEl.onclick = () => {\n",
-              "        google.colab.notebook.generateWithVariable('df_survey');\n",
+              "        google.colab.notebook.generateWithVariable('df_hire');\n",
               "      }\n",
               "      })();\n",
               "    </script>\n",
@@ -3347,27 +3347,23 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "variable_name": "df_survey",
-              "summary": "{\n  \"name\": \"df_survey\",\n  \"rows\": 100,\n  \"fields\": [\n    {\n      \"column\": \"studentID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 100,\n        \"samples\": [\n          \"83\",\n          \"53\",\n          \"70\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Program\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"After\",\n          \"Before\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"survey_data\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"OK\",\n          \"Bored\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "variable_name": "df_hire",
+              "summary": "{\n  \"name\": \"df_hire\",\n  \"rows\": 100,\n  \"fields\": [\n    {\n      \"column\": \"employeeID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 100,\n        \"samples\": [\n          \"83\",\n          \"53\",\n          \"70\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Month\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 12,\n        \"samples\": [\n          \"Nov\",\n          \"Sep\",\n          \"Jun\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Ticket\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Received\",\n          \"Processed\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 5
         }
       ],
       "source": [
-        "#Generating Data for Figure 0.5 Example 2 (after storytelling with data)\n",
-        "num_students = 100\n",
+        "#Generating Data for Figure 0.3 Example 1 (after storytelling with data)\n",
+        "num_employee = 100\n",
         "np.random.seed(0)\n",
-        "df_survey = pd.DataFrame(columns = [\"studentID\"])\n",
-        "df_survey[\"studentID\"] = [str(x) for x in np.arange(num_students)]\n",
-        "df_survey[\"Program\"] = np.random.choice([\"Before\",\"After\"], size = num_students)\n",
-        "df_survey[\"survey_data\"] = np.random.choice([\"Bored\", \"Not Great\", \"OK\", \"Kind of interested\", \" Excited\"], size = num_students)\n",
-        "df_survey\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "df_hire = pd.DataFrame(columns = [\"employeeID\"])\n",
+        "df_hire[\"employeeID\"] = [str(x) for x in np.arange(num_employee)]\n",
+        "df_hire[\"Month\"] = np.random.choice([\"Jan\", \"Feb\", \"March\", \"April\", \" May\", \"Jun\",\"Jul\",\"Aug\",\"Sep\",\"Oct\",\"Nov\",\"Dec\"], size = num_employee)\n",
+        "df_hire[\"Ticket\"] = np.random.choice([\"Received\",\"Processed\"], size = num_employee)\n",
+        "df_hire"
       ]
     }
   ],
