--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -72,7 +72,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install ucimlrepo\n"
+        "pip install ucimlrepo  #to extract details from UCI repository\n"
       ],
       "metadata": {
         "colab": {
@@ -107,7 +107,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from ucimlrepo import fetch_ucirepo\n",
+        "from ucimlrepo import fetch_ucirepo  #Code is provided by UCI to extract datasource from UCI repository\n",
         "\n",
         "# fetch dataset\n",
         "breast_cancer_wisconsin_diagnostic = fetch_ucirepo(id=17)\n",
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "fe925521-979f-4983-8d85-8db8d1316e99",
       "metadata": {
         "id": "fe925521-979f-4983-8d85-8db8d1316e99"
@@ -164,10 +164,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 352
+          "height": 412
         },
         "id": "IEaW9JdKs6u2",
-        "outputId": "7f1ab3cd-36ae-4f75-e7b7-b7cfef7cecc7"
+        "outputId": "cea810d5-fd2e-4d01-bd96-b5db52fd0e0c"
       },
       "id": "IEaW9JdKs6u2",
       "execution_count": 2,
@@ -228,7 +228,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fafff302-014e-4891-909d-6ce8354fedaa\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6abbaa0b-f3dd-47b0-95e3-befb293d40be\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -518,7 +518,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fafff302-014e-4891-909d-6ce8354fedaa')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6abbaa0b-f3dd-47b0-95e3-befb293d40be')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -570,12 +570,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fafff302-014e-4891-909d-6ce8354fedaa button.colab-df-convert');\n",
+              "        document.querySelector('#df-6abbaa0b-f3dd-47b0-95e3-befb293d40be button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fafff302-014e-4891-909d-6ce8354fedaa');\n",
+              "        const element = document.querySelector('#df-6abbaa0b-f3dd-47b0-95e3-befb293d40be');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -604,13 +604,6 @@
           },
           "metadata": {},
           "execution_count": 2
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: Total number of columns (32) exceeds max_columns (20) limiting to first (20) columns.\n"
-          ]
         }
       ]
     },
@@ -2194,9 +2187,84 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Check outliers using quantile method\n",
+        "for column in [\"radius1\",\"texture1\", \"concavity1\", \"area1\"]:\n",
+        "  Q1= df_BreastCancer[column].quantile(0.25)\n",
+        "  Q2= df_BreastCancer[column].quantile(0.75)\n",
+        "  IQR=Q2-Q1\n",
+        "\n",
+        "  lower=Q1-2*IQR\n",
+        "  upper=Q2+2*IQR\n",
+        "\n",
+        "  outliers= df_BreastCancer[(df_BreastCancer[column]<lower) | (df_BreastCancer[column]>upper)]\n",
+        "  print(\"priting outliers:\")\n",
+        "  print(outliers[[column]])\n"
+      ],
+      "metadata": {
+        "id": "GdI8Heo05xTi",
+        "outputId": "3a63fae8-c969-42d4-9d1b-be8aa8ea948d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "GdI8Heo05xTi",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "priting outliers:\n",
+            "     radius1\n",
+            "82     25.22\n",
+            "122    24.25\n",
+            "180    27.22\n",
+            "212    28.11\n",
+            "352    25.73\n",
+            "461    27.42\n",
+            "521    24.63\n",
+            "priting outliers:\n",
+            "     texture1\n",
+            "232     33.81\n",
+            "239     39.28\n",
+            "259     33.56\n",
+            "priting outliers:\n",
+            "     concavity1\n",
+            "78       0.3754\n",
+            "82       0.3339\n",
+            "108      0.4264\n",
+            "122      0.4268\n",
+            "152      0.4108\n",
+            "202      0.3523\n",
+            "352      0.3368\n",
+            "461      0.3635\n",
+            "567      0.3514\n",
+            "priting outliers:\n",
+            "      area1\n",
+            "82   1878.0\n",
+            "108  1509.0\n",
+            "122  1761.0\n",
+            "164  1686.0\n",
+            "180  2250.0\n",
+            "202  1685.0\n",
+            "212  2499.0\n",
+            "236  1670.0\n",
+            "339  1747.0\n",
+            "352  2010.0\n",
+            "368  1546.0\n",
+            "461  2501.0\n",
+            "503  1682.0\n",
+            "521  1841.0\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "**Conclusion**: The breast cancer dataset is a clean dataset with no missing value and no duplicates records. I do not need to modify any features. This dataset doesn’t have equal number of data of each class from the categorical column dignosis(B, M). From the analysis we can see benign case is 62.7% and malignant case is 37.3% out of 569 instances. Benign class is notably(almost twice) larger than the malignant class. Hence the classes are imbalance."
+        "**Conclusion**: The breast cancer dataset is a clean dataset with no missing value and no duplicates records. I do not need to modify any features. This dataset doesn’t have equal number of data of each class from the categorical column dignosis(B, M). From the analysis we can see benign case is 62.7% and malignant case is 37.3% out of 569 instances. Benign class is notably(almost twice) larger than the malignant class. Hence the classes are imbalance. We can see some outliers in the data but best approach will be to visualize the data using histogram method"
       ],
       "metadata": {
         "id": "kgO9hTQ2iINP"
@@ -2305,7 +2373,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Acknowledgement: asked ChatGPT about how to add text within a chart and aligned correctly and learned about .text(...) functions."
+        "Acknowledgement: Asked ChatGPT about how to add text within a chart and aligned correctly and learned about .text(...) functions."
       ],
       "metadata": {
         "id": "Vmiygsh5J6p-"
