--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -469,15 +469,15 @@
         "df_BrazilCancer.sample(10, random_state=42) #printing random sample of 10 rows"
       ],
       "metadata": {
-        "id": "tcdIUcR1i4ow",
-        "outputId": "6e2ff9bc-84e7-4507-e4d2-f6540a1a3ece",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 639
-        }
+        },
+        "id": "tcdIUcR1i4ow",
+        "outputId": "fe037555-8d13-40a8-9a7c-c5b6a15ee507"
       },
       "id": "tcdIUcR1i4ow",
-      "execution_count": 28,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +555,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-59c3a9e5-12a1-4a9e-8d9e-7c0b7719251f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3102032b-0418-4dc1-b8d7-fbf2068cb665\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -845,7 +845,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-59c3a9e5-12a1-4a9e-8d9e-7c0b7719251f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3102032b-0418-4dc1-b8d7-fbf2068cb665')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -897,12 +897,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-59c3a9e5-12a1-4a9e-8d9e-7c0b7719251f button.colab-df-convert');\n",
+              "        document.querySelector('#df-3102032b-0418-4dc1-b8d7-fbf2068cb665 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-59c3a9e5-12a1-4a9e-8d9e-7c0b7719251f');\n",
+              "        const element = document.querySelector('#df-3102032b-0418-4dc1-b8d7-fbf2068cb665');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -930,7 +930,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 42
         }
       ]
     },
@@ -940,12 +940,12 @@
         "df_BrazilCancer.describe()"
       ],
       "metadata": {
-        "id": "hHUs3rnUp0_m",
-        "outputId": "ade2b069-343c-4e1b-a062-874f6658aed8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        }
+        },
+        "id": "hHUs3rnUp0_m",
+        "outputId": "ade2b069-343c-4e1b-a062-874f6658aed8"
       },
       "id": "hHUs3rnUp0_m",
       "execution_count": 29,
@@ -1170,11 +1170,11 @@
         "df_BrazilCancer.info()"
       ],
       "metadata": {
-        "id": "3UieUhQ3wlwm",
-        "outputId": "5f1e099b-59c2-467f-f7bd-d10bd55e9f7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3UieUhQ3wlwm",
+        "outputId": "5f1e099b-59c2-467f-f7bd-d10bd55e9f7c"
       },
       "id": "3UieUhQ3wlwm",
       "execution_count": 30,
@@ -1241,11 +1241,11 @@
         "df_BrazilCancer.duplicated().sum()"
       ],
       "metadata": {
-        "id": "wemTB9wSwqPo",
-        "outputId": "e798e824-7d76-467b-d0a5-f59f2046ecb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wemTB9wSwqPo",
+        "outputId": "e798e824-7d76-467b-d0a5-f59f2046ecb8"
       },
       "id": "wemTB9wSwqPo",
       "execution_count": 37,
@@ -1265,19 +1265,59 @@
     {
       "cell_type": "code",
       "source": [
-        "#Finding any duplicate values in the ID column\n",
-        "df_BrazilCancer[\"Patient.Code\"].duplicated().any()\n",
-        "#duplicate IDs are found"
+        "#remove duplicate rows and keep the last instance\n",
+        "df_BrazilCancer2= df_BrazilCancer.drop_duplicates(keep=\"last\")"
       ],
       "metadata": {
-        "id": "_NA0ZUQ6zQgb",
-        "outputId": "4187c2d5-5071-4df7-c5da-8aff61d9b6ca",
+        "id": "5-0W5DiM4GSV"
+      },
+      "id": "5-0W5DiM4GSV",
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_BrazilCancer2.duplicated().any() # check after removing duplicate"
+      ],
+      "metadata": {
+        "id": "KTXE7TgJ4k_P",
+        "outputId": "3c197a3a-ca4b-444f-c6da-958d2198b394",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
+      "id": "KTXE7TgJ4k_P",
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.False_"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Finding any duplicate values in the ID column\n",
+        "df_BrazilCancer2[\"Patient.Code\"].duplicated().any()\n",
+        "#duplicate IDs are found"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_NA0ZUQ6zQgb",
+        "outputId": "ff052330-be74-49a5-b4ca-2fedba5d0aec"
+      },
       "id": "_NA0ZUQ6zQgb",
-      "execution_count": 33,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1287,7 +1327,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 40
         }
       ]
     },
@@ -1295,35 +1335,35 @@
       "cell_type": "code",
       "source": [
         "#Check whether there are any null values in the DataFrame\n",
-        "df_BrazilCancer.isna().any().any()\n",
-        "#No null values are found\n",
-        "df_BrazilCancer.isna().any()"
+        "df_BrazilCancer2.isna().any().any()\n",
+        "#null values are found\n",
+        "df_BrazilCancer2.isna().any()"
       ],
       "metadata": {
-        "id": "X1KZf3-dzUbE",
-        "outputId": "a036fef7-77ed-4101-ca4d-cad34a9a0a37",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "X1KZf3-dzUbE",
+        "outputId": "865c37fc-fe1f-4656-b50a-126e4b7257cb"
       },
       "id": "X1KZf3-dzUbE",
-      "execution_count": 34,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Patient.Code                        True\n",
+              "Patient.Code                       False\n",
               "RCBP.Name                          False\n",
               "Gender                             False\n",
               "Date.of.Birth                       True\n",
               "Age                                 True\n",
               "Raca.Color                          True\n",
-              "Nationality                         True\n",
+              "Nationality                        False\n",
               "Naturality.State                    True\n",
               "Naturality                          True\n",
-              "Degree.of.Education                 True\n",
+              "Degree.of.Education                False\n",
               "State.Civil                         True\n",
               "Code.Profession                     True\n",
               "Name.Occupation                     True\n",
@@ -1379,7 +1419,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>Patient.Code</th>\n",
-              "      <td>True</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>RCBP.Name</th>\n",
@@ -1403,7 +1443,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Nationality</th>\n",
-              "      <td>True</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Naturality.State</th>\n",
@@ -1415,7 +1455,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Degree.of.Education</th>\n",
-              "      <td>True</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>State.Civil</th>\n",
@@ -1535,16 +1575,48 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 57
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        " #mean, median, and mode of each column\n",
+        "#fill in some missing(NaN) value\n",
+        "df_BrazilCancer2[\"Degree.of.Education\"]=df_BrazilCancer2[\"Degree.of.Education\"].fillna(\"Unknown\")\n",
+        "df_BrazilCancer2[\"Nationality\"]=df_BrazilCancer2[\"Nationality\"].fillna(\"Unknown\")\n",
+        "df_BrazilCancer2[\"Patient.Code\"]=df_BrazilCancer2[\"Patient.Code\"].fillna(\"000000000.0\")\n"
+      ],
+      "metadata": {
+        "id": "ArC6tTZI9OBX",
+        "outputId": "35e44332-0c81-44ab-f4af-539215c9f2e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ArC6tTZI9OBX",
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-1543771036.py:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_BrazilCancer2[\"Patient.Code\"]=df_BrazilCancer2[\"Patient.Code\"].fillna(\"000000000.0\")\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " #mean, median and mode\n",
         " #Mean\n",
-        " df_BrazilCancer_2=df_BrazilCancer.drop(\"ID\", axis=1)\n",
+        " df_BrazilCancer_2=df_BrazilCancer2.drop(\"Patient.Code\", axis=1)\n",
         " #print(df_BreastCancer_2)\n",
         " print(\"Mean\")\n",
         " mean = df_BrazilCancer_2.mean(numeric_only=True)\n",
@@ -1559,11 +1631,75 @@
         " print(mode.iloc[0])"
       ],
       "metadata": {
-        "id": "3w7loLqHzXhg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3w7loLqHzXhg",
+        "outputId": "c57fe54a-f7e8-4116-936f-6f1e3b7935dd"
       },
       "id": "3w7loLqHzXhg",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean\n",
+            "Age                      60.022237\n",
+            "Code.Profession          98.803302\n",
+            "Code.of.Morphology    82850.933432\n",
+            "year                   2008.209599\n",
+            "dtype: float64\n",
+            "........................................\n",
+            "median\n",
+            "Age                      62.0\n",
+            "Code.Profession           0.0\n",
+            "Code.of.Morphology    80973.0\n",
+            "year                   2009.0\n",
+            "dtype: float64\n",
+            "........................................\n",
+            "mode\n",
+            "RCBP.Name                                                        RCBP SÃO PAULO\n",
+            "Gender                                                                 FEMININO\n",
+            "Date.of.Birth                                                        1940-01-01\n",
+            "Age                                                                        65.0\n",
+            "Raca.Color                                                               BRANCO\n",
+            "Nationality                                                             Unknown\n",
+            "Naturality.State                                                   MINAS GERAIS\n",
+            "Naturality                                                             CAMPINAS\n",
+            "Degree.of.Education                                                     Unknown\n",
+            "State.Civil                                                              CASADO\n",
+            "Code.Profession                                                             0.0\n",
+            "Name.Occupation                                                SEM INFORMAÇÃO\\t\n",
+            "Status.Address                                                        SÃO PAULO\n",
+            "City.Address                                                          SÃO PAULO\n",
+            "Description.of.Topography                                         PROSTATA, SOE\n",
+            "Topography.Code                                                            C619\n",
+            "Morphology.Description                                      ADENOCARCINOMA, SOE\n",
+            "Code.of.Morphology                                                        81403\n",
+            "Description.of.Disease                                                 PROSTATA\n",
+            "Illness.Code                                                                C61\n",
+            "Child.Illness.Description          Outros carcinomas malignos não especificados\n",
+            "Child.Illness.Code                                                         XI-F\n",
+            "Youth.Adult.Illness.Description                               CARCINOMA DE PELE\n",
+            "Code.of.Disease.Adult.Young.                                                7.2\n",
+            "Indicator.of.Rare.Case                                                    False\n",
+            "Diagnostic.means                                   HISTOLOGIA DO TUMOR PRIMÁRIO\n",
+            "Extension                                                            LOCALIZADO\n",
+            "Laterality                                                        NÃO SE APLICA\n",
+            "Statement                                                                     I\n",
+            "TNM                                                                      T1N0M0\n",
+            "Status.Vital                                                              MORTO\n",
+            "Type.of.Death                                                            CÂNCER\n",
+            "Date.of.Death                                                        2012-10-29\n",
+            "Date.of.Last.Contact                                                 2012-10-29\n",
+            "Date.of.Diagnostic                                                   2008-07-01\n",
+            "Distant.metastasis                                                          C76\n",
+            "year                                                                     2011.0\n",
+            "Name: 0, dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
